[tool.poetry]
name = "docusketch-flask-redis"
version = "0.1.0"
description = ""
authors = ["iamkhaidarzakirov <khaidarzakirov@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.12.0"
flask = "3.0.0"
redis = "5.0.1"
requests = "^2.31.0"
memory-profiler = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
